test/sema/typeck/impl/extension-class-tuple-err.dora
class Foo[T]
impl Foo[(Int32, Float32)] {
    fn bar() {}
}
fn f(x: Foo[(Int32, Int32)]) {
    x.bar();
}
